tolk-tester/tests/invalid-symbol/err-2880.tolk
const c = self.asdf

/**
@compilation_should_fail
@stderr using `self` outside a function
 */
